@@ -3046,15 +3046,16 @@ looking in @file{/usr/xpg4/bin} which is used on some commercial
 Unixes).
 
 You will not be able to build most of the manuals unless you have
-@command{makeinfo} version 4.7 or later installed, and if not some of
-the @HTML{} manuals will be linked to @acronym{CRAN}. To make PDF
-versions of the manuals you will also need file @file{texinfo.tex}
-installed (which is part of the @acronym{GNU} @pkg{texinfo} distribution
-but is often made part of the @TeX{} package in re-distributions) as
-well as @command{texi2dvi}.@footnote{@command{texi2dvi} is normally a
-shell script.  Some versions (e.g.@: those from @pkg{texinfo} 4.13a and
-5.2) need to be run under @command{bash} rather than a Bourne shell as
-on, say, Solaris.}  Further, the versions of @command{texi2dvi} and
+@command{makeinfo} version 4.7 or later installed, and if not most of
+the @HTML{} manuals will be linked to a version on @acronym{CRAN}. To
+make PDF versions of the manuals you will also need file
+@file{texinfo.tex} installed (which is part of the @acronym{GNU}
+@pkg{texinfo} distribution but is often made part of the @TeX{} package
+in re-distributions) as well as
+@command{texi2dvi}.@footnote{@command{texi2dvi} is normally a shell
+script.  Some versions (e.g.@: those from @pkg{texinfo} 4.13a and 5.2)
+need to be run under @command{bash} rather than a Bourne shell as on,
+say, Solaris.}  Further, the versions of @command{texi2dvi} and
 @file{texinfo.tex} need to be compatible: we have seen problems with
 older @TeX{} distributions (TeXLive 2007 and MiKTeX 2.8) used with
 @pkg{texinfo} 4.13.  It is recommended to use @pkg{texinfo} version 5.x,
